retrieve attributes from geogit

--- a/views/map.jade
+++ b/views/map.jade
@@ -11,4 +11,5 @@ script(type="text/javascript", src="http://cdn.leafletjs.com/leaflet-0.5.1/leafl
 script(type="text/javascript", src="/scripts/wicket.js")
 script(type="text/javascript", src="/scripts/wicket-leaflet.js")
 
+script(type="text/javascript", src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js")
 script(type="text/javascript", src="/scripts/geogit-viz.js")
