--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
     meta(name="viewport", content="initial-scale=1.0, user-scalable=no, width=device-width, minimum-scale=1, maximum-scale=1")
-    title Police Precinct Maps
+    title GeoGit Viz
     link(rel="stylesheet", href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.5/js/dojo/dijit/themes/claro/claro.css")
     link(rel="stylesheet", href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.5/js/esri/css/esri.css")
     script(type="text/javascript") var dojoConfig = { parseOnLoad: true };
