--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,6 @@ html
   head
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
     meta(name="viewport", content="initial-scale=1.0, user-scalable=no, width=device-width, minimum-scale=1, maximum-scale=1")
-    title GeoGit Viz
+    title GeoGinger
 
   body!= body
