progress toward adding any github repo

--- a/views/api.jade
+++ b/views/api.jade
@@ -202,6 +202,6 @@ div.container
         
         a(name="push")
         h4 Push
-        p Push is currently enabled for all repos on GeoGinger. In the future it will be shut off, then selectively re-enabled.
+        p Push is currently disabled for all repos on GeoGinger (you wouldn't want someone overwriting your data!). In the future it will be selectively re-enabled.
 
 script(type="text/javascript", src="/scripts/api.js")
