--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ div.container
         ul
           li Map and track changes to your geodata
           li Sync to ArcGIS Server and GitHub
-          li Backdate commits to make a timeline of changes to your map
+          li Use historic data to show changes to your map
     .span4
       .hero-unit
         h4 Code and installation
@@ -26,10 +26,12 @@ div.container
       h3 More
       ul
         li
-          a(href="/projects") Boston Dev Projects
+          a(href="/permits") Boston Permits
+        li
+          a(href="/divvy") Divvy Bikes
+        li
+          a(href="/osm") OpenStreetMap bbox
         li
           a(href="/gitimport") Ben GitHub Import
-        li
-          a(href="/permits") Boston Permits
     
     iframe.span9(src="/permits?label=dateonly", height="350", frameborder="0", scrolling="no", marginheight="0", marginwidth="0")
