working add-repo scripts

--- a/views/github.jade
+++ b/views/github.jade
@@ -23,11 +23,7 @@ div.container
           br
           input#projectinfo(type="text", name="project")
           br
-          //
-            a.btn.btn-primary(href="#", onclick="addRepo()") Add Repo
-          input(type="submit") Add Repo
-        script(type="text/javascript", src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js")
-        script(type="text/javascript", src="/scripts/githubtools.js")
+          input(type="submit", value="Add Repo")
     
     .span4
       h3 What is GitHub?
