--- a/views/index.jade
+++ b/views/index.jade
@@ -34,4 +34,4 @@ div.container
         li
           a(href="/gitimport") Ben GitHub Import
     
-    iframe.span9(src="/permits?label=dateonly", height="350", frameborder="0", scrolling="no", marginheight="0", marginwidth="0")
+    iframe.span9(src="/projects?label=dateonly", height="350", frameborder="0", scrolling="no", marginheight="0", marginwidth="0")
