--- a/views/wait.jade
+++ b/views/wait.jade
@@ -9,4 +9,4 @@ p
 
 script(type="text/javascript", src="http://code.jquery.com/jquery-1.9.1.min.js")
 script(type="text/javascript") var port = "#{port}";
-script(type="text/javascript", src="waitbar.js")
+script(type="text/javascript", src="/scripts/waitbar.js")
