--- a/views/github.jade
+++ b/views/github.jade
@@ -46,10 +46,12 @@ div.container
       h3 Perfect Sync
       p GeoGinger checks GitHub daily for changes to your GeoJSON files.
       p Commits on GeoGinger have the same message and timestamp as your commit to GitHub. Everything matches up!
-      p There are currently two examples:
+      p There are currently three examples:
       ul
         li
           a(href="/divvy") Divvy Bikes - Chicago
+        li
+          a(href="/git/2003") Bike Lanes - Boston
         li
           a(href="/gitimport") WiFi Hotspots - DC
 
