--- a/views/wait.jade
+++ b/views/wait.jade
@@ -10,10 +10,10 @@ ul
     a(href="/git/#{port}") geoginger.com/git/#{port}
     span .
   li
-    span Is this a new repo?&nbsp
+    span On the command line?&nbsp
     span(style="font-family:Courier, monospace;") geogit remote add gg http://geoginger.com:#{port}/geogit
   li
-    span GitHub? Add a web hook:&nbsp;http://geoginger.com/refresh/#{port}
+    span On GitHub? Add a web hook:&nbsp;http://geoginger.com/refresh/#{port}
 
 script(type="text/javascript", src="http://code.jquery.com/jquery-1.9.1.min.js")
 script(type="text/javascript") var port = "#{port}";
