attempt to add OSM watcher

--- a/views/index.jade
+++ b/views/index.jade
@@ -30,7 +30,7 @@ div.container
         li
           a(href="/divvy") Divvy Bikes
         li
-          a(href="/osm") OpenStreetMap BBox
+          a(href="/osm_sudan") OpenStreetMap BBox
         li
           a(href="/gitimport") Ben GitHub Import
     
@@ -47,7 +47,7 @@ div.container
         li
           a(href="/github") GitHub
         li
-          a(href="/osmmake") OpenStreetMap
+          a(href="/osm") OpenStreetMap
         li
           a(href="/push") Local Repo
 
