--- a/views/map.jade
+++ b/views/map.jade
@@ -1,6 +1,13 @@
 #sidebar
+  if user && project
+    h3 #{user}/#{project}
   h4 Compare Commits
   div#commitlist
+  select#download
+    option(value="", selected="selected") Download latest
+    option(value="shp") Shapefile
+    option(value="pg") PostGIS
+    option(value="sl") Spatialite
 #map
 
 link(rel="stylesheet", href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css")
