--- a/views/index.jade
+++ b/views/index.jade
@@ -1,25 +1,29 @@
 link(type="text/css", rel="stylesheet", href="/stylesheets/bootstrap.min.css")
+link(type="text/css", rel="stylesheet", href="/stylesheets/bootstrap-responsive.css")
 
-div.container
-  .row
-    .span8
+div.container.container-fluid
+  .row-fluid
+    .span6.offset1
       .hero-unit(style="padding-left:0")
         h2 GeoGinger
         ul
           li Map and track changes to your geodata
-          li Sync to ArcGIS Server and GitHub
-          li Use historic data to show changes to your map
+          li Sync to ArcGIS Server, GitHub, and OpenStreetMap
+          li Push GeoGit repos to the cloud
     .span4
       .hero-unit
-        h4 Code and installation
+        h4 Get Started
+        p Create your first project with
         ul.nav.nav-list
           li
-            a(href="http://geogit.org/docs/quickstart.html") GeoGit
+            a(href="/github") GitHub
           li
-            a(href="http://github.com/mapmeld/geogit-viz") GeoGinger
+            a(href="/osm") OpenStreetMap
+          li
+            a(href="/push") GeoGit Repo
 
-  .row
-    .span3
+  .row-fluid
+    .span3.offset1
       h3 Try it out
       p Select dates to show changes in data &rarr;
       hr
@@ -34,24 +38,22 @@ div.container
         li
           a(href="/gitimport") Ben GitHub Import
     
-    iframe.span9(src="/permits?label=dateonly", height="350", frameborder="0", scrolling="no", marginheight="0", marginwidth="0")
+    iframe.span7(src="/permits?label=dateonly", height="350", frameborder="0", scrolling="no", marginheight="0", marginwidth="0")
 
   br
   br
 
-  .row
-    .span3
-      h3 Add your data
-      p You can quickly create your first project from GitHub, OpenStreetMap, or a local GeoGit repo
+  .row-fluid
+    .span3.offset1
+      h3 Code and installation
+      p Want to use GeoGit on your computer? Here's how to get started:
       ul
         li
-          a(href="/github") GitHub
+          a(href="http://geogit.org/docs/quickstart.html") GeoGit
         li
-          a(href="/osm") OpenStreetMap
-        li
-          a(href="/push") Local Repo
+          a(href="http://github.com/CityOfBoston/geogit-viz") GeoGinger
 
-    .span9
+    .span7
       h4 GeoGinger is built on GeoGit - a version control that thinks in geo
       br
       style(type="text/css") code{ display: block; background: #000; color: #fff; border: none; }
