store osm bounds

--- a/views/map.jade
+++ b/views/map.jade
@@ -27,5 +27,5 @@ script(type="text/javascript", src="/scripts/wicket-leaflet.js")
 
 script(type="text/javascript", src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js")
 
-script(type="text/javascript") var port = #{port}, user = "#{user}", project = "#{project}", source = "#{source}"; 
+script(type="text/javascript") var port = #{port}, user = "#{user}", project = "#{project}", source = "#{source}", coords = [#{coords}];
 script(type="text/javascript", src="/scripts/geogit-viz.js")
