generate geojson, add OSM API link on OSM repos

--- a/views/map.jade
+++ b/views/map.jade
@@ -11,6 +11,7 @@
   select#download
     option(value="", selected="selected") Download latest
     option(value="shp") Shapefile
+    option(value="gj") GeoJSON
     //
       option(value="pg") PostGIS
       option(value="sl") Spatialite
