--- a/views/wait.jade
+++ b/views/wait.jade
@@ -7,6 +7,10 @@ p This page will appear until your map is ready
 ul
   li
     span Your map's url will be&nbsp
+    a(href="/map/#{port}") geoginger.com/map/#{port}
+    span .
+  li
+    span Your map's commit history will be at&nbsp
     a(href="/git/#{port}") geoginger.com/git/#{port}
     span .
   li
