don't let user create osm repo until they move map

--- a/views/makeosm.jade
+++ b/views/makeosm.jade
@@ -48,7 +48,7 @@ div.container
           br
           input#projectinfo(type="text", name="project")
           br
-          input(type="submit", value="Add Repo")
+          input#osmsubmit(type="submit", disabled="disabled", value="Add Repo")
 
 br
 br
