--- a/views/wait.jade
+++ b/views/wait.jade
@@ -20,7 +20,7 @@ ul
     span On GitHub? Add a web hook:&nbsp;http://geoginger.com/refresh/#{port}
 
 script(type="text/javascript", src="http://code.jquery.com/jquery-1.9.1.min.js")
-script(type="text/javascript") var port = "#{port}";
+script(type="text/javascript") var port = "#{port}"; var source = "#{source}";
 script(type="text/javascript", src="/scripts/waitbar.js")
 
 iframe(src="http://bl.ocks.org/mbostock/raw/1246403/cd587bd485ff362aabafe708e54044667118363e/", marginwidth="0", marginheight="0", scrolling="no", style="width: 960px; height: 300px; border: 1px solid #dedede;")
