leaflet.draw option

--- a/views/map.jade
+++ b/views/map.jade
@@ -6,6 +6,10 @@
     div.modified
       img(src="/images/editmark.png")
     div.removed -
+
+  h4
+    a(href="/map/#{port}") Current Map
+
   h4 Compare Commits
   div#commitlist
   select#download
