store and remap geojson

--- a/views/draw.jade
+++ b/views/draw.jade
@@ -30,5 +30,5 @@ script(type="text/javascript", src="/scripts/leaflet.draw.js")
 
 script(type="text/javascript", src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js")
 
-script(type="text/javascript") var port = #{port}, coords = [#{coords}], gj = '#{geojson}';
+script(type="text/javascript") var port = #{port}, coords = [#{coords}], gj = '!{geojson}';
 script(type="text/javascript", src="/scripts/geogit-draw.js")
