--- a/views/draw.jade
+++ b/views/draw.jade
@@ -1,13 +1,21 @@
 #sidebar
   h3 Drawable View
 
-  form(action="/draw", method="POST")
-    input#json(type="hidden", name="json", value="")
-    input#coords(type="hidden", name="coords", value="")
-    input(type="text", name="commit", value="")
-    br
-    input(type="submit", value="Start Map")
-  if port != 0
+  if port == 0
+    form(action="/draw", method="POST")
+      input#json(type="hidden", name="json", value="")
+      input#coords(type="hidden", name="coords", value="")
+      input(type="text", name="commit", value="")
+      br
+      input(type="submit", value="Start Map")
+  else
+    form(action="/draw", method="POST")
+      input(type="hidden", name="port", value="#{port}")
+      input#json(type="hidden", name="json", value='!{geojson}')
+      input#coords(type="hidden", name="coords", value="#{coords}")
+      input(type="text", name="commit", value="")
+      br
+      input(type="submit", value="Edit Map")
     h4
       a(href="/git/#{port}") See Commits
     select#download
