link from homepage to /draw

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,11 +14,13 @@ div.container.container-fluid
       .hero-unit
         h4 Get Started
         p Create your first project with
-        ul.nav.nav-list
+        ul.nav.nav-list(style="font-size:16px;")
           li
             a(href="/github") GitHub
           li
             a(href="/osm") OpenStreetMap
+          li
+            a(href="/draw") Draw Shapes
           li
             a(href="/push") GeoGit Repo
 
